--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo">LOGO</div>
         <ul class="top-bar">
-            <li class="sobre"></li>
-            <li class="pontos"></li>
-            <li class="produtos"></li>
+            <li class="sobre">Sobre</li>
+            <li class="pontos">Pontos</li>
+            <li class="produtos">Produtos</li>
         </ul>
     </header>
     <main>
