Adicionar fonte e arquivo para imagens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section class="main-text">
             <h1>GANHE PONTOS E TROQUE POR PRODUTOS</h1>
-            <h2>Explicando o funcionamento de forma resumida</h2>
+            <h2>A cada contribuição de lixo reciclável nos nossos pontos de coleta, você acumula pontos que podem ser trocados por produtos!</h2>
         </section>
         <section class="button">
             <button>COMEÇE AGORA</button>
