Aumentar fonte e centralizar texto

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <main>
         <section class="main-text">
-            <h1>GANHE PONTOS E TROQUE POR PRODUTOS</h1>
-            <h2>A cada contribuição de lixo reciclável nos nossos pontos de coleta, você acumula pontos que podem ser trocados por produtos!</h2>
-        </section>
-        <section class="button">
-            <button>COMEÇE AGORA</button>
+            <div class="text-content">
+                <h1>GANHE PONTOS E TROQUE POR PRODUTOS</h1>
+                <h2>A cada contribuição de lixo reciclável nos nossos pontos de coleta, você acumula pontos que podem ser trocados por produtos!</h2>
+            </div>
+            <button>Começe agora</button>
         </section>
         <footer>
             <p>2024 projeto integrador senai</p>
